# mcpserverweather

./: README.md
mcp-client/: .env  gradio-client-gpt.py  pyproject.toml  pyproject.working.toml  requirements.txt  weather-client-gpt-old.1.py  weather-client-gpt-old.2.py  weather-client-gpt-old.py  weather-client-gpt.py
weather/: pyproject.toml  requirements.txt
